--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
+    "moment": "^2.19.1",
     "mysql2": "^1.4.2",
     "sequelize": "^4.13.8"
   }
