--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^2.3.10",
     "moment": "^2.19.1",
     "mysql2": "^1.4.2",
+    "request": "^2.83.0",
     "sequelize": "^4.13.8"
   }
 }
