--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
         "dialect": "mysql"
     },
     "production": {
-        "username": "root",
-        "password": null,
-        "database": "database_production",
-        "host": "127.0.0.1",
+        "username": "mzfuvm89hyu165r4",
+        "password": "k8dw6jlsguayhinb",
+        "database": "users_db",
+        "host": "i943okdfa47xqzpy.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
         "dialect": "mysql"
     }
 }
