--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
     "moment": "^2.19.1",
+    "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
+    "path": "^0.12.7",
     "request": "^2.83.0",
-    "sequelize": "^4.13.8"
+    "sequelize": "^4.13.10"
   }
 }
