--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
         "dialect": "mysql"
     },
     "production": {
-        "username": "root",
-        "password": null,
-        "database": "database_production",
-        "host": "127.0.0.1",
+        "username": "zpxj8kgfn4cvtxm7",
+        "password": "qtaef7s4e8pir8s0",
+        "database": "v6xbmi874ymr7xw6",
+        "host": "op2hpcwcbxb1t4z9.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
         "dialect": "mysql"
     }
 }
